k8s.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: file-server
---
apiVersion: v1
kind: Service
metadata:
  name: file-server
  namespace: file-server
spec:
  type: NodePort
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: file-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-server
  namespace: file-server
  labels:
    app: file-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-server
  template:
    metadata:
      labels:
        app: file-server
    spec:
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      containers:
        - name: server
          image: registry.gitlab.com/kamackay/filer:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 8080
              path: /
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 1
          volumeMounts:
            - name: file-volume
              mountPath: /files
      volumes:
        - name: file-volume
          hostPath:
              path: "/storage/files"
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: filer-ingress
  namespace: file-server
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - files.keithm.io
      secretName: files-cert
  rules:
    - host: files.keithm.io
      http:
        paths:
          - backend:
              serviceName: file-server
              servicePort: 8080
---
